# technical-analysis-engine

./: .gitignore  Makefile  README.md  pyproject.toml  start_api.py
docs/: ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  README.md  README_API.md  README_iOS.md
examples/: README.md  ios_integration.swift
examples/analysis_results/: GOOGL_api_analysis_summary.txt
examples/api_integration/: README.md  api_integration_example.py  create_api_visualization.py  enhanced_api_visualization.py  simple_api_visualization.py
examples/api_strategy_examples/: test_advanced_custom_strategy.py  test_simple_visualization.py
examples/documentation/: API_VISUALIZATION_SUMMARY.md  examples_README.md  ios_api_documentation.md
examples/engine_examples/: real_data_example.py
examples/ios_development/: README.md
examples/visualizations/: google_comprehensive_analysis.html  google_signal_timeline.html  google_stock_analysis.html
src/app/: data_service.py  main.py  models.py  services.py
src/streamlit_app/: README.md  __init__.py  requirements.txt  run_streamlit.py  setup.py  streamlit_app.py
src/streamlit_app/pages/: strategy_builder.py  strategy_tester.py
src/techincal-analysis-engine/: README.md  __init__.py  engine.py  example_standalone.py  indicators.py  my_strategy.json  signals.py  strategy.py  ta_types.py  test_framework.py
src/technical_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/technical_analysis_engine/: __init__.py  data_service.py  ticker_config.py  tickers.yaml  utils.py
src/technical_analysis_engine/engine/: __init__.py  builders.py  config.py  core.py  strategy.py
tests/: README.md  conftest.py  run_tests.py
tests/integration/: test_api_integration.py
tests/unit/: test_engine_core.py  test_framework.py  test_signal_generation.py
